--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,8 @@
 @import "./base/variables";
 @import "./base/mixins";
-@import "./base/globals"
+@import "./base/globals";
+
+@import "./modules/side";
+@import "./modules/social";
+@import "./modules/styled-content";
+@import "./modules/styled-link-wrapper";
