Added a new icon

--- a/src/assets/styles/modules/_styled-link-wrapper.scss
+++ b/src/assets/styles/modules/_styled-link-wrapper.scss
@@ -21,10 +21,13 @@
     writing-mode: vertical-rl;
 
     color: $light-slate;
+    transition: 0.5s;
 
     &:hover,
     &:focus {
       transform: translateY(-3px);
+      transition: 0.5s;
+      color: $common-white;
     }
   }
 }
