--- a/src/assets/styles/modules/_social.scss
+++ b/src/assets/styles/modules/_social.scss
@@ -1,4 +1,4 @@
-.social-list {
+.social-list-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,6 +16,14 @@
   }
 
   &__list-item {
+    transition: 0.5s;
+    
+    &:hover,
+    &:focus {
+      transform: translateY(-3px);
+      transition: 0.5s;
+    }
+
     &:last-of-type {
       margin-bottom: 20px;
     }
@@ -23,11 +31,6 @@
 
   &__list-item-link {
     padding: 10px;
-
-    &:hover,
-    &:focus {
-      transform: translateY(-3px);
-    }
 
     svg {
       width: 20px;
